# svsite

./: .gitignore  README.md  gunicorn_prod_config.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: az_migrate_dj54me-202507021155-webapp.yml  main_dj54me-202507021155-webapp.yml
apps/core/: admin.py  models.py  urls.py  views.py
apps/core/data/: certs.json
apps/core/migrations/: 0001_initial.py
apps/core/templates/core/: about.html  certs.html  home.html
apps/webtools/: urls.py  views.py
apps/webtools/templates/webtools/: index.html  iplookup.html  sha_func.html
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
static/css/: custom.css
static/js/: custom.js
templates/: base.html
