[project]
name = "svsite"
version = "0.1.1"
description = "Personal portfolio website built with Django"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.3",
    "django-redis>=6.0.0",
    "fontawesomefree>=6.6.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "whitenoise>=6.9.0",
]
