[project]
name = "svsite"
version = "0.1.1"
description = "Personal portfolio website built with Django"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.3",
    "fontawesomefree>=6.6.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "whitenoise>=6.9.0",
]
